--- a/composer.json
+++ b/composer.json
@@ -39,9 +39,7 @@
     ],
     "require": {
         "php": ">=8.0",
-        "illuminate/container": "^9.0",
-        "illuminate/routing": "^9.0",
-        "illuminate/support": "^9.0",
+        "laravel/framework": "^10.0",
         "payum/core": "^1.7"
     },
     "require-dev": {
